[gd_scene load_steps=66 format=3 uid="uid://cyteuulb2ml41"]

[ext_resource type="Texture2D" uid="uid://b8xgbmb6lm7i1" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Attack01.png" id="1_revu5"]
[ext_resource type="Script" path="res://characters/char_knight_templar/knight_templar.gd" id="1_vvrgc"]
[ext_resource type="Texture2D" uid="uid://chgbsarx2koco" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Attack02.png" id="2_d77v8"]
[ext_resource type="Texture2D" uid="uid://kwuqwkg6oa0t" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Attack03.png" id="3_jilni"]
[ext_resource type="Texture2D" uid="uid://dqhukqbsr4e4" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Block.png" id="4_u274m"]
[ext_resource type="Texture2D" uid="uid://cn7vt0kq474fj" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Death.png" id="5_855xl"]
[ext_resource type="Texture2D" uid="uid://cp8p8a8bltix7" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Hurt.png" id="6_ys1e2"]
[ext_resource type="Texture2D" uid="uid://ttp3f1v3gjqo" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Idle.png" id="7_my3n4"]
[ext_resource type="Texture2D" uid="uid://dayieclb61pmg" path="res://resources/characters/Knight Templar/Knight Templar with shadows/Knight Templar-Walk01.png" id="8_o0wr2"]

[sub_resource type="CircleShape2D" id="CircleShape2D_hbuek"]
radius = 8.0

[sub_resource type="AtlasTexture" id="AtlasTexture_7uib7"]
atlas = ExtResource("1_revu5")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_yl7ap"]
atlas = ExtResource("1_revu5")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_78han"]
atlas = ExtResource("1_revu5")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jbvrk"]
atlas = ExtResource("1_revu5")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h54tn"]
atlas = ExtResource("1_revu5")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_jsfe3"]
atlas = ExtResource("1_revu5")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tx5x5"]
atlas = ExtResource("1_revu5")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_636la"]
atlas = ExtResource("2_d77v8")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_bxylc"]
atlas = ExtResource("2_d77v8")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sum2q"]
atlas = ExtResource("2_d77v8")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihm8q"]
atlas = ExtResource("2_d77v8")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_y485b"]
atlas = ExtResource("2_d77v8")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rp3h"]
atlas = ExtResource("2_d77v8")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_sil2n"]
atlas = ExtResource("2_d77v8")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_81ng0"]
atlas = ExtResource("2_d77v8")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xdcml"]
atlas = ExtResource("3_jilni")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj21g"]
atlas = ExtResource("3_jilni")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_l726r"]
atlas = ExtResource("3_jilni")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lkarp"]
atlas = ExtResource("3_jilni")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hv2ts"]
atlas = ExtResource("3_jilni")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_qq6nj"]
atlas = ExtResource("3_jilni")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_agbvn"]
atlas = ExtResource("3_jilni")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_34m51"]
atlas = ExtResource("3_jilni")
region = Rect2(700, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_tncqy"]
atlas = ExtResource("3_jilni")
region = Rect2(800, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_a4qcc"]
atlas = ExtResource("3_jilni")
region = Rect2(900, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h6hsv"]
atlas = ExtResource("3_jilni")
region = Rect2(1000, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4lob"]
atlas = ExtResource("4_u274m")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fvnx"]
atlas = ExtResource("4_u274m")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6o1t"]
atlas = ExtResource("4_u274m")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_6bd7j"]
atlas = ExtResource("4_u274m")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vukti"]
atlas = ExtResource("5_855xl")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_f4d4y"]
atlas = ExtResource("5_855xl")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyg0n"]
atlas = ExtResource("5_855xl")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_81g8c"]
atlas = ExtResource("5_855xl")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_mq4va"]
atlas = ExtResource("6_ys1e2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xp11"]
atlas = ExtResource("6_ys1e2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxkct"]
atlas = ExtResource("6_ys1e2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8v4x"]
atlas = ExtResource("6_ys1e2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo81o"]
atlas = ExtResource("7_my3n4")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_vxp76"]
atlas = ExtResource("7_my3n4")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_23nqe"]
atlas = ExtResource("7_my3n4")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_uqftt"]
atlas = ExtResource("7_my3n4")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_lpbc3"]
atlas = ExtResource("7_my3n4")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_hq3gn"]
atlas = ExtResource("7_my3n4")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g1bv"]
atlas = ExtResource("8_o0wr2")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_h4v2t"]
atlas = ExtResource("8_o0wr2")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rvcm"]
atlas = ExtResource("8_o0wr2")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_n8egf"]
atlas = ExtResource("8_o0wr2")
region = Rect2(300, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_b573t"]
atlas = ExtResource("8_o0wr2")
region = Rect2(400, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_ua6sc"]
atlas = ExtResource("8_o0wr2")
region = Rect2(500, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl8cy"]
atlas = ExtResource("8_o0wr2")
region = Rect2(600, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_3r12k"]
atlas = ExtResource("8_o0wr2")
region = Rect2(700, 0, 100, 100)

[sub_resource type="SpriteFrames" id="SpriteFrames_h2tj5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7uib7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yl7ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_78han")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jbvrk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h54tn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jsfe3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tx5x5")
}],
"loop": true,
"name": &"knight.t_atk1",
"speed": 15.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_636la")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bxylc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sum2q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihm8q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y485b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rp3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sil2n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81ng0")
}],
"loop": true,
"name": &"knight.t_atk2",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xdcml")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj21g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l726r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lkarp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hv2ts")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qq6nj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_agbvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34m51")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tncqy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a4qcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h6hsv")
}],
"loop": true,
"name": &"knight.t_atk3",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4lob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fvnx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6o1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bd7j")
}],
"loop": true,
"name": &"knight.t_block",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vukti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f4d4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyg0n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81g8c")
}],
"loop": true,
"name": &"knight.t_death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mq4va")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xp11")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxkct")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8v4x")
}],
"loop": true,
"name": &"knight.t_hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo81o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vxp76")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23nqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uqftt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lpbc3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hq3gn")
}],
"loop": true,
"name": &"knight.t_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g1bv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h4v2t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rvcm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n8egf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b573t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ua6sc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl8cy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3r12k")
}],
"loop": true,
"name": &"knight.t_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_x6kkm"]

[sub_resource type="CircleShape2D" id="CircleShape2D_bpfcr"]

[node name="knight_templar" type="CharacterBody2D"]
script = ExtResource("1_vvrgc")

[node name="PlayerCollider" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_hbuek")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_h2tj5")
animation = &"knight.t_atk1"

[node name="PlayerCamera" type="Camera2D" parent="."]
scale = Vector2(1.245, 1.245)
zoom = Vector2(4, 4)
limit_left = 0
limit_top = 0
limit_right = 2496
limit_bottom = 1280

[node name="Direction" type="Marker2D" parent="."]

[node name="ActionableFinder" type="Area2D" parent="Direction"]
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="Direction/ActionableFinder"]
position = Vector2(0, -19)
shape = SubResource("CircleShape2D_x6kkm")
metadata/_edit_group_ = true

[node name="player_hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="player_hitbox"]
shape = SubResource("CircleShape2D_bpfcr")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -6.0
offset_top = -16.0
offset_right = 124.0
offset_bottom = 11.0
scale = Vector2(0.1, 0.1)
show_percentage = false

[node name="regen_timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="deal_attack_timer" type="Timer" parent="."]
wait_time = 0.5

[node name="attack_cooldown" type="Timer" parent="."]

[node name="atk2_cooldown" type="Timer" parent="."]
wait_time = 5.0

[node name="atk3_cooldown" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[connection signal="area_entered" from="player_hitbox" to="." method="_on_player_hitbox_area_entered"]
[connection signal="body_entered" from="player_hitbox" to="." method="_on_player_hitbox_body_entered"]
[connection signal="body_exited" from="player_hitbox" to="." method="_on_player_hitbox_body_exited"]
[connection signal="timeout" from="regen_timer" to="." method="_on_regen_timer_timeout"]
[connection signal="timeout" from="deal_attack_timer" to="." method="_on_deal_attack_timer_timeout"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
[connection signal="timeout" from="atk2_cooldown" to="." method="_on_atk_2_cooldown_timeout"]
[connection signal="timeout" from="atk3_cooldown" to="." method="_on_atk_3_cooldown_timeout"]
